# SQuaRE-ROOT

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md
SQUARE/: .gitignore  README.md  demo.md  mc_samples_mc_ecdlp_lhs_uniform_only.csv  mc_summary_mc_ecdlp_lhs_uniform_only.json  pyproject.toml  report.json
SQUARE/Algorithms/: README.md  ecdlp_secp256k1_babbush_et_al_2026.yaml  shor_rsa_gidney_ekera_2021.yaml
SQUARE/Assumptions/: Schemas.yaml
SQUARE/Assumptions/MagicStateProduction/: README.md  ccz_factory_gidney_ekera_2021.yaml  t_factory_fallback_gidney_ekera_2021.yaml
SQUARE/Assumptions/Modalities/: README.md  (+3 more)
SQUARE/Configs/: README.md  ecdlp_secp256k1_babbush_2026_low_toffoli.yaml  ecdlp_secp256k1_babbush_2026_low_toffoli_illustrative_qcvv_qem.yaml  ecdlp_secp256k1_babbush_2026_low_toffoli_qcvv_qem.yaml  ecdlp_secp256k1_cain_2026_neutral_atom_qldpc.yaml  monte_carlo_study_ecdlp_example.yaml  monte_carlo_study_ecdlp_lhs.yaml  monte_carlo_study_ecdlp_with_1q2q.yaml  oratomic_gold_path.yaml  oratomic_gold_path_qcvv_qem.yaml  rsa2048_gidney_ekera_2021_parallel.yaml  rsa2048_gidney_ekera_2021_parallel_qcvv_qem.yaml
SQUARE/docs/: leaderboard.md  monte_carlo.md  mvp.md  output-contract.md  validation_index.yaml  validation_overview.md
SQUARE/notebooks/: osre_interactive_report.ipynb
SQUARE/scripts/: build_leaderboard.py  interactive_report_streamlit.py  mc_demo.py  plot_mc_csv.py
SQUARE/site/: app.js  index.html  style.css
SQUARE/slides/: gidney_plot_stderr.txt  gidney_rsa2048_parallel_report.json  oratomic_report.json
SQUARE/square/: __init__.py  __main__.py  cli.py  cli_demo.py  cli_mc.py  formula_eval.py  heuristic_union_inputs.py  layout_optimization.py  loader.py  plotting.py  qec_distance_heuristic.py  report.py  report_assembly.py  report_dashboard.py  report_distance.py  report_formula_metrics.py  report_formula_pins.py  report_layers.py  report_magic_aux.py  report_magic_throughput.py  report_markdown.py  report_physical_layout.py  report_qec_patch.py  report_system_metrics.py  report_timing.py  schedule_heuristic.py  yaml_assumption.py  yaml_numeric.py  yaml_validate.py
SQUARE/square_re/: __init__.py
SQUARE/square_re.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
SQUARE/tests/: __init__.py  test_cli_demo.py  test_cli_report.py  test_forward_model.py  test_layout_optimization.py  test_loader.py  test_modalities_osre_physical_parity.py  test_monte_carlo.py  test_nominal_gate_proxy.py  test_plotting.py  test_qec_distance_heuristic.py  test_report.py  test_report_contract_sync.py  test_report_dashboard.py  test_report_formula_metrics.py  test_report_layers.py  test_report_magic_aux.py  test_report_magic_throughput.py  test_report_physical_layout.py  test_report_timing.py  test_schedule_heuristic.py  test_yaml_assumption.py  test_yaml_numeric.py  test_yaml_validate.py
(+26 files in other folders)
