[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "square"
version = "0.0.1"
description = "SQuaRE — quantum resource estimation assumptions and loader"
readme = "README.md"
requires-python = ">=3.10"
dependencies = ["pyyaml>=6"]

[project.scripts]
square-report = "square.cli:main"
square-mc = "square.cli_mc:main"

[project.optional-dependencies]
dev = ["pytest>=7"]

[tool.setuptools.packages.find]
where = ["."]
include = ["square*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
